test/files/neg/t8754-java-only/Test_2.java
class Test {
  void test(B<String> b) {
  	ListModel<String> x = b.peer().getModel();
  }
}
